src/test/ui/issues/issue-23966.rs
fn main() {
    "".chars().fold(|_, _| (), ());
    //~^ ERROR E0277
}
